# socket_lite

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  Socket_Lite.h
include/: AsyncAcceptor.h  AsyncPlatformSocket.h  AwaitablePlatformSocket.h  Context.h  Internal.h  Listener.h  PlatformSocket.h  Socket.h  Socket_Lite.h  Socket_Liteimpl.h  async_acceptor.h  defs.cpp  defs.h  error_handling.h  impl.h  io_service.h  io_thread_service.h  ip_address.h  ip_endpoint.h  ipv4_address.h  ipv4_endpoint.h  ipv6_address.h  ipv6_endpoint.h  memorypool.h  socket.h  socket_accept_operation.h  socket_address.h  socket_connect_operation.h  socket_disconnect_operation.h  socket_io_events.h  socket_recv_from_operation.h  socket_recv_operation.h  socket_send_operation.h  socket_send_to_operation.h  sockfuncs.h  spinlock.h  utils.h  win_defs.h
include/Internal/: Context.h  Listener.h  Socket.h  ThreadPool.h  defs.h  memorypool.h
include/common/: List.h  Structures.h
include/include/: AsyncPlatformSocket.h  AwaitableContext.h  Context.h  Internal.h  PlatformSocket.h  defs.h
include/internal/: CommonStructures.h  FastAllocator.h  SpinLock.h
include/internal/windows/: Acceptor.h  ClientContext.h  Connector.h  Context.h  IO_Service.h  ListenContext.h  Socket.h  Structures.h
include/linux/: Context.h  IO_Context.h  Listener.h  Socket.h  Structures.h
include/windows/: Context.h  IO_Context.h  ListenContext.h  Listener.h  Socket.h  Structures.h
src/: Acceptor.cpp  Context.cpp  Listener.cpp  PlatformSocket.cpp  Socket.cpp  SocketFuncs.cpp  Socket_Lite.cpp  io_service.cpp  ip_endpoint.cpp  ipv4_address.cpp  ipv4_endpoint.cpp  ipv6_address.cpp  ipv6_endpoint.cpp  socket.cpp  socket_accept_operation.cpp  socket_connect_operation.cpp
src/linux/: Context.cpp  IO_Context.cpp  Listener.cpp  Socket.cpp
src/windows/: Acceptor.cpp  ClientContext.cpp  Connector.cpp  Context.cpp  IO_Context.cpp  IO_Service.cpp  ListenContext.cpp  Listener.cpp  Socket.cpp  Structures.cpp
test/: CMakeLists.txt  CpuUsage.cpp  CpuUsage.h  asio_connectiontest.h  asio_echomodels.h  asio_echotest.h  asio_multithreadedechotest.h  asio_transfertest.h  async_tcp_echo_server.h  cpumem_monitor.h  examplehelpers.h  main.cpp  my_awaitconnectiontest.h  my_awaitechotest.h  my_awaittransfertest.h  my_connectWRtest.h  my_connectiontest.h  my_echomodels.h  my_echotest.h  my_multithreadedecho.h  my_transfertest.h
test/asio/detail/: null_socket_service.hpp  reactive_socket_service.hpp
